TEA4-31: fix spacing for larger registration forms

--- a/frontend/src/pages/Signup/SignupPage.module.scss
+++ b/frontend/src/pages/Signup/SignupPage.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 48px;
+  margin: 48px 0;
 }
 
 .tabOverrides {
